--- a/templates/catalogo.html
+++ b/templates/catalogo.html
@@ -55,7 +55,7 @@
         }
         .navbar .btn-prestiti {
             color: white;
-            background-color: #cf8e0a;
+            background-color: #fd7e14;
             text-shadow: 0px 0px 4px rgba(0,0,0,0.5);
         }       
         .navbar .btn-libro {
