--- a/templates/recupero_password.html
+++ b/templates/recupero_password.html
@@ -52,9 +52,9 @@
             <div class="col-md-6">
                 <div class="card p-4">
                     <div class="card-body">
-                        <h1 class="text-center mb-4">Проблема?</h1>
+                        <h1 class="text-center mb-4">Hai dimenticato la tua password?</h1>
                         <h1 class="text-center mb-4">Contatta l'amministratore</h1>
-                        <!-- <button type="submit" class="btn btn-primary w-100" id="random-button">Het Проблема</button> -->
+                        <!-- <button type="submit" class="btn btn-primary w-100" id="random-button">No problem</button> -->
                     </div>
                 </div>
             </div>
