--- a/templates/gestisci_prestiti.html
+++ b/templates/gestisci_prestiti.html
@@ -220,8 +220,8 @@
           <input type="text" class="form-control" id="email" name="email" required>
         </div>
         <div class="mb-3">
-          <label for="isbn" class="form-label">ISBN libro (formato 978-12-34567-89-0)</label>
-          <input type="text" class="form-control" id="isbn" name="isbn" required>
+          <label for="id_libro" class="form-label">ID libro </label>
+          <input type="number" class="form-control" id="id_libro" name="id_libro" required>
         </div>
         <div class="mb-3">
           <label for="data_prestito" class="form-label">Data inizio prestito</label>
@@ -257,9 +257,9 @@
           <th>ISBN</th>
           <th>Email</th>
           <th>Nome utente</th>
-          <th>Data prestito</th>
-          <th>Data restituzione</th>
-          <th>Data restituzione prevista</th>
+          <th>Inizio</th>
+          <th>Restituito</th>
+          <th>Restituzione prevista</th>
           <th>Promemoria</th>
           <th>Stato</th>
           <th>Azioni</th>
