--- a/templates/inserisci_libro.html
+++ b/templates/inserisci_libro.html
@@ -228,6 +228,17 @@
                 required
               />
             </div>
+            <div class="mb-3">
+              <label for="id_copia" class="form-label">ID Copia</label>
+              <input
+                type="number"
+                class="form-control"
+                id="id_copia"
+                name="id_copia"
+                placeholder="Inserisci il numero della copia (default 1)"
+                required
+              />
+            </div>
             <div class="d-grid gap-2">
               <button type="submit" class="btn btn-primary btn-rounded">
                 Inserisci
